--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/16/2020 02:09:00 PM</p>
+    <p class="lastupdate">09/16/2020 02:14:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">94.3&#176;F</td>
+        <td class="data">94.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">94.3&#176;F</td>
+        <td class="data">94.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">94.3&#176;F</td>
+        <td class="data">94.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">42.7&#176;F</td>
+        <td class="data">41.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">17%</td>
+        <td class="data">16%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.941 inHg (-0.075)</td>
+        <td class="data">29.937 inHg (-0.077)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">2 mph ESE (112&#176;)</td>
+        <td class="data">1 mph E (90&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -153,14 +153,14 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="02:08:47 PM">
-            94.3</span><br/>
+          <span title="02:13:35 PM">
+            94.9</span><br/>
           <span title="06:54:23 AM">
             46.1</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="02:08:47 PM (Wednesday)">
-            94.3</span><br/>
+          <span title="02:13:35 PM (Wednesday)">
+            94.9</span><br/>
           <span title="06:54:23 AM (Wednesday)">
             46.1</span>
         </td>
@@ -187,12 +187,12 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="02:08:47 PM" class="hival">
-            94.3</span>
+          <span title="02:13:35 PM" class="hival">
+            94.9</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="02:08:47 PM (Wednesday)" class="hival">
-            94.3</span>
+          <span title="02:13:35 PM (Wednesday)" class="hival">
+            94.9</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/06/2020 04:04:42 PM" class="hival">
@@ -305,8 +305,8 @@
         <td class="data new_row hilo_day">
           <span title="09:42:01 AM">
             30.047</span><br/>
-          <span title="02:04:01 PM">
-            29.941</span>
+          <span title="02:11:01 PM">
+            29.937</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="10:03:01 AM (Tuesday)">
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">14 days, 23 hours, 22 minutes</td>
+      <td class="data">14 days, 23 hours, 27 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">14 days, 23 hours, 22 minutes</td>
+      <td class="data">14 days, 23 hours, 27 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
