--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/16/2020 02:19:00 PM</p>
+    <p class="lastupdate">09/16/2020 02:24:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">95.3&#176;F</td>
+        <td class="data">95.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">95.3&#176;F</td>
+        <td class="data">95.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">95.3&#176;F</td>
+        <td class="data">95.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">40.3&#176;F</td>
+        <td class="data">38.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">15%</td>
+        <td class="data">14%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.934 inHg (-0.083)</td>
+        <td class="data">29.929 inHg (-0.085)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">2 mph NNE (22&#176;)</td>
+        <td class="data">4 mph SSW (202&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -153,14 +153,14 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="02:18:11 PM">
-            95.3</span><br/>
+          <span title="02:22:37 PM">
+            95.6</span><br/>
           <span title="06:54:23 AM">
             46.1</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="02:18:11 PM (Wednesday)">
-            95.3</span><br/>
+          <span title="02:22:37 PM (Wednesday)">
+            95.6</span><br/>
           <span title="06:54:23 AM (Wednesday)">
             46.1</span>
         </td>
@@ -187,12 +187,12 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="02:18:11 PM" class="hival">
-            95.3</span>
+          <span title="02:22:37 PM" class="hival">
+            95.6</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="02:18:11 PM (Wednesday)" class="hival">
-            95.3</span>
+          <span title="02:22:37 PM (Wednesday)" class="hival">
+            95.6</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/06/2020 04:04:42 PM" class="hival">
@@ -271,8 +271,8 @@
         <td class="data new_row hilo_day">
           <span title="07:12:57 AM">
             81</span><br/>
-          <span title="02:15:45 PM">
-            15</span>
+          <span title="02:20:53 PM">
+            14</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="07:40:53 AM (Monday)">
@@ -305,8 +305,8 @@
         <td class="data new_row hilo_day">
           <span title="09:42:01 AM">
             30.047</span><br/>
-          <span title="02:15:01 PM">
-            29.934</span>
+          <span title="02:22:01 PM">
+            29.928</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="10:03:01 AM (Tuesday)">
@@ -375,9 +375,9 @@
       <tr>
         <td class="label">Wind Max</td>
         <td class="data new_row hilo_day">
-          <span title="11:24:51 AM">
-            5</span><br/>
-          22
+          <span title="02:23:05 PM">
+            7</span><br/>
+          210
         </td>
         <td class="data new_row hilo_week">
           <span title="04:43:42 PM (Monday)">
@@ -440,7 +440,7 @@
         </td>
         <td class="data new_row hilo_day">
           0<br/>
-          28
+          29
         </td>
         <td class="data new_row hilo_week">
           1<br/>
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">98%</td>
+      <td class="data">94%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">14 days, 23 hours, 32 minutes</td>
+      <td class="data">14 days, 23 hours, 37 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">14 days, 23 hours, 32 minutes</td>
+      <td class="data">14 days, 23 hours, 37 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
