--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/16/2020 02:29:00 PM</p>
+    <p class="lastupdate">09/16/2020 02:34:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,19 +50,19 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">95.2&#176;F</td>
+        <td class="data">96.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">95.2&#176;F</td>
+        <td class="data">96.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">95.2&#176;F</td>
+        <td class="data">96.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">38.5&#176;F</td>
+        <td class="data">39.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.925 inHg (-0.086)</td>
+        <td class="data">29.921 inHg (-0.090)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">2 mph E (90&#176;)</td>
+        <td class="data">4 mph S (180&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -153,14 +153,14 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="02:22:37 PM">
-            95.6</span><br/>
+          <span title="02:33:13 PM">
+            96.0</span><br/>
           <span title="06:54:23 AM">
             46.1</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="02:22:37 PM (Wednesday)">
-            95.6</span><br/>
+          <span title="02:33:13 PM (Wednesday)">
+            96.0</span><br/>
           <span title="06:54:23 AM (Wednesday)">
             46.1</span>
         </td>
@@ -187,12 +187,12 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="02:22:37 PM" class="hival">
-            95.6</span>
+          <span title="02:33:13 PM" class="hival">
+            96.0</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="02:22:37 PM (Wednesday)" class="hival">
-            95.6</span>
+          <span title="02:33:13 PM (Wednesday)" class="hival">
+            96.0</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/06/2020 04:04:42 PM" class="hival">
@@ -305,8 +305,8 @@
         <td class="data new_row hilo_day">
           <span title="09:42:01 AM">
             30.047</span><br/>
-          <span title="02:28:01 PM">
-            29.925</span>
+          <span title="02:33:01 PM">
+            29.921</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="10:03:01 AM (Tuesday)">
@@ -440,7 +440,7 @@
         </td>
         <td class="data new_row hilo_day">
           0<br/>
-          29
+          30
         </td>
         <td class="data new_row hilo_week">
           1<br/>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">14 days, 23 hours, 42 minutes</td>
+      <td class="data">14 days, 23 hours, 47 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">14 days, 23 hours, 42 minutes</td>
+      <td class="data">14 days, 23 hours, 47 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
