--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/16/2020 02:39:00 PM</p>
+    <p class="lastupdate">09/16/2020 02:44:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">95.7&#176;F</td>
+        <td class="data">96.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">95.7&#176;F</td>
+        <td class="data">96.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">95.7&#176;F</td>
+        <td class="data">96.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">40.6&#176;F</td>
+        <td class="data">37.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">15%</td>
+        <td class="data">13%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.920 inHg (-0.090)</td>
+        <td class="data">29.918 inHg (-0.090)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">1 mph W (270&#176;)</td>
+        <td class="data">6 mph SW (225&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -153,14 +153,14 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="02:33:13 PM">
-            96.0</span><br/>
+          <span title="02:42:47 PM">
+            96.4</span><br/>
           <span title="06:54:23 AM">
             46.1</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="02:33:13 PM (Wednesday)">
-            96.0</span><br/>
+          <span title="02:42:47 PM (Wednesday)">
+            96.4</span><br/>
           <span title="06:54:23 AM (Wednesday)">
             46.1</span>
         </td>
@@ -187,12 +187,12 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="02:33:13 PM" class="hival">
-            96.0</span>
+          <span title="02:42:47 PM" class="hival">
+            96.4</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="02:33:13 PM (Wednesday)" class="hival">
-            96.0</span>
+          <span title="02:42:47 PM (Wednesday)" class="hival">
+            96.4</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/06/2020 04:04:42 PM" class="hival">
@@ -305,8 +305,8 @@
         <td class="data new_row hilo_day">
           <span title="09:42:01 AM">
             30.047</span><br/>
-          <span title="02:37:01 PM">
-            29.920</span>
+          <span title="02:42:01 PM">
+            29.917</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="10:03:01 AM (Tuesday)">
@@ -375,9 +375,9 @@
       <tr>
         <td class="label">Wind Max</td>
         <td class="data new_row hilo_day">
-          <span title="02:23:05 PM">
-            7</span><br/>
-          210
+          <span title="02:42:43 PM">
+            11</span><br/>
+          187
         </td>
         <td class="data new_row hilo_week">
           <span title="04:43:42 PM (Monday)">
@@ -440,7 +440,7 @@
         </td>
         <td class="data new_row hilo_day">
           0<br/>
-          30
+          31
         </td>
         <td class="data new_row hilo_week">
           1<br/>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">14 days, 23 hours, 52 minutes</td>
+      <td class="data">14 days, 23 hours, 57 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">14 days, 23 hours, 52 minutes</td>
+      <td class="data">14 days, 23 hours, 57 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
