--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/16/2020 02:49:00 PM</p>
+    <p class="lastupdate">09/16/2020 02:54:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,23 +50,23 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">95.6&#176;F</td>
+        <td class="data">96.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">95.6&#176;F</td>
+        <td class="data">96.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">95.6&#176;F</td>
+        <td class="data">96.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">38.8&#176;F</td>
+        <td class="data">33.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">14%</td>
+        <td class="data">11%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
@@ -74,7 +74,7 @@
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">3 mph SSW (202&#176;)</td>
+        <td class="data">7 mph SW (225&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">76.5&#176;F</td>
+        <td class="data">76.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -237,8 +237,8 @@
         <td class="data new_row hilo_day">
           <span title="12:23:43 PM">
             50.9</span><br/>
-          <span title="02:24:06 AM">
-            36.5</span>
+          <span title="02:53:21 PM">
+            33.1</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="11:14:17 AM (Monday)">
@@ -271,14 +271,14 @@
         <td class="data new_row hilo_day">
           <span title="07:12:57 AM">
             81</span><br/>
-          <span title="02:25:09 PM">
-            13</span>
+          <span title="02:53:21 PM">
+            11</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="07:40:53 AM (Monday)">
             95</span><br/>
-          <span title="02:03:34 PM (Monday)">
-            12</span>
+          <span title="02:53:21 PM (Wednesday)">
+            11</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/14/2020 07:40:53 AM">
@@ -440,7 +440,7 @@
         </td>
         <td class="data new_row hilo_day">
           0<br/>
-          29
+          31
         </td>
         <td class="data new_row hilo_week">
           1<br/>
@@ -470,8 +470,8 @@
       <tr>
         <td class="label">Inside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="12:00:04 AM">
-            76.5</span><br/>
+          <span title="02:53:01 PM">
+            76.7</span><br/>
           <span title="07:15:01 AM">
             72.5</span>
         </td>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">15 days, 0 hours, 2 minutes</td>
+      <td class="data">15 days, 0 hours, 7 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">15 days, 0 hours, 2 minutes</td>
+      <td class="data">15 days, 0 hours, 7 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
