--- a/statistics.html
+++ b/statistics.html
@@ -36,7 +36,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/16/2020 02:49:00 PM</p>
+    <p class="lastupdate">09/16/2020 02:54:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -153,8 +153,8 @@
           <td class="units">&#176;F</td>
           <td class="data new_row">50.9<br/>
             <span class="timestamp">12:23:43 PM</span><br/>
-            36.5<br/>
-            <span class="timestamp">02:24:06 AM</span>
+            33.1<br/>
+            <span class="timestamp">02:53:21 PM</span>
           </td>
           <td class="data new_row">52.9<br/>
             <span class="timestamp">11:14:17 AM (Monday)</span><br/>
@@ -182,13 +182,13 @@
           <td class="units">%</td>
           <td class="data new_row">81<br/>
             <span class="timestamp">07:12:57 AM</span><br/>
-            13<br/>
-            <span class="timestamp">02:25:09 PM</span>
+            11<br/>
+            <span class="timestamp">02:53:21 PM</span>
           </td>
           <td class="data new_row">95<br/>
             <span class="timestamp">07:40:53 AM (Monday)</span><br/>
-            12<br/>
-            <span class="timestamp">02:03:34 PM (Monday)</span>
+            11<br/>
+            <span class="timestamp">02:53:21 PM (Wednesday)</span>
           </td>
           <td class="data new_row">95<br/>
             <span class="timestamp">09/14/2020 07:40:53 AM</span><br/>
@@ -335,7 +335,7 @@
           </td>
           <td class="data new_row">
             0<br/>
-            29
+            31
           </td>
           <td class="data new_row">
             1<br/>
@@ -361,8 +361,8 @@
           <td class="label">Inside Temperature</td>
           <td class="units">&#176;F</td>
           <td class="data new_row">
-            76.5<br/>
-            <span class="timestamp">12:00:04 AM</span><br/>
+            76.7<br/>
+            <span class="timestamp">02:53:01 PM</span><br/>
             72.5<br/>
             <span class="timestamp">07:15:01 AM</span>
           </td>
